2009-03-31  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/38915
	* trans-expr.c (gfc_trans_assignment_1): Ensure temporaries
	have a string_length.

2009-03-31  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38915
	* gfortran.dg/char_length_15.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@145370 138bc75d-0d04-0410-961f-82ee72b054a4